--- a/mini_app/docker-compose.yml
+++ b/mini_app/docker-compose.yml
@@ -10,6 +10,6 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-    environment:
-      - NODE_ENV=development
+    env_file:
+      - .env
     command: npm run dev
