--- a/mini_app/docker-compose.yml
+++ b/mini_app/docker-compose.yml
@@ -1,15 +1,22 @@
-version: '3.8'
+version: "3.8"
 
 services:
   nextjs:
     build: .
     container_name: nextjs-dev
-    restart: unless-stopped
+    restart: always
     ports:
       - "3000:3000"
-    volumes:
-      - .:/app
-      - /app/node_modules
-    env_file:
-      - .env
+    env_file: .env
     command: npm run dev
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-proxy
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - nextjs
