--- a/mini_app/docker-compose.yml
+++ b/mini_app/docker-compose.yml
@@ -5,18 +5,7 @@ services:
     build: .
     container_name: nextjs-dev
     restart: always
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     env_file: .env
     command: npm run dev
-
-  nginx:
-    image: nginx:alpine
-    container_name: nginx-proxy
-    restart: always
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - nextjs
