--- a/mini_app/docker-compose.yml
+++ b/mini_app/docker-compose.yml
@@ -1,11 +1,16 @@
-version: "3.8"
+version: "3.9"
 
 services:
   nextjs:
-    build: .
-    container_name: nextjs-dev
-    restart: always
-    expose:
-      - "3000"
-    env_file: .env
+    image: node:20-alpine
+    container_name: nextjs
+    working_dir: /app
+    volumes:
+      - ./nextjs:/app
+      - /app/node_modules
     command: npm run dev
+    env_file: .env
+    environment:
+      - NODE_ENV=production
+    ports:
+      - "3000:3000"   # проброс на хост
