--- a/mini_app/Dockerfile
+++ b/mini_app/Dockerfile
@@ -1,20 +1,22 @@
-# 1. Базовый образ
+# Dockerfile
 FROM node:20-alpine
 
-# 2. Рабочая директория
 WORKDIR /app
 
-# 3. Копируем package.json и package-lock.json
+# Копируем package.json и package-lock.json
 COPY package*.json ./
 
-# 4. Устанавливаем зависимости
+# Устанавливаем зависимости
 RUN npm install
 
-# 5. Копируем всё приложение
+# Копируем весь проект
 COPY . .
 
-# 6. Открываем порт (по умолчанию Next.js dev слушает 3000)
+# Переменные окружения
+ENV NODE_ENV=production
+
+# Открываем порт
 EXPOSE 3000
 
-# 7. Запускаем в dev-режиме
+# Команда запуска
 CMD ["npm", "run", "dev"]
