--- a/mini_app/docker-compose.yml
+++ b/mini_app/docker-compose.yml
@@ -8,3 +8,6 @@ services:
     env_file: .env
     ports:
       - "3000:3000"
+    environment:
+      - PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
+      - PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
